--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - graphics/crafts_room.png
-    - graphics/boiler_room.png
+    - graphics/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
