--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   custom_navigator: ^0.3.0
+  floating_search_bar: ^0.3.0
 
 dev_dependencies:
   flutter_test:
