--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   custom_navigator: ^0.3.0
+  sqfentity: ^1.3.5+3
+  sqfentity_gen: ^1.2.3
+  flutter_datetime_picker: ^1.2.8  
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.6.5
+  build_verify: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
