--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,10 @@ dependencies:
   floating_search_bar: ^0.3.0
   sqfentity: ^1.3.5+3
   sqfentity_gen: ^1.2.3
-  flutter_datetime_picker: ^1.2.8  
+  flutter_datetime_picker: ^1.2.8
   intl: ^0.16.1
   shared_preferences: ^0.5.7+3
+  provider:
 
 dev_dependencies:
   flutter_test:
