--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,26 +1,16 @@
-name: Dart CI
-
-on:
-  push:
-  pull_request:
-
+on: pull_request
+name: Test, Build and Release apk
 jobs:
   build:
-
+    name: Build APK
     runs-on: ubuntu-latest
-
-    container:
-      image:  google/dart:latest
-
     steps:
-    - uses: actions/checkout@v2
-      
-    - name: Install dependencies
-      uses: steebchen/flutter@v1.0.0
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
       with:
-        args: pub get
-      
-    - name: build apk
-      uses: steebchen/flutter@v1.0.0
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
       with:
-        args: build apk --release
+        flutter-version: '1.17.1'
+    - run: flutter pub get
+    - run: flutter build apk --debug --split-per-abi
