--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: test_project
+name: uk.co.tcork.stardew_companion
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
