--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   intl: ^0.16.1
   shared_preferences: ^0.5.7+3
   provider:
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
